# genai-content-labeling-system

./: .gitignore  README.md  config.yaml  content_detector.db  docker-compose.yml  env.example
.cursor/rules/: memory-bank.mdc
backend/: Dockerfile  README.md  config.yaml  database.py  entrypoint.sh  env.example  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_gemini.py
backend/scripts/: init_db.py  remove_api_key_column.py
backend/src/: __init__.py  ai_service.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
frontend/: Dockerfile  README.md  env.example  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/app/: authenticated-layout.tsx  client-layout.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/components/admin/: UrlUploadForm.tsx
frontend/src/components/auth/: AuthContainer.tsx  AuthContext.tsx  LoginForm.tsx  ProtectedRoute.tsx  SignupForm.tsx
frontend/src/components/ui/: Badge.tsx  (+8 more)
frontend/src/contexts/: ApiKeyContext.tsx  AuthContext.tsx  ThemeContext.tsx
frontend/src/lib/: auth.ts  config.ts  design-system.ts
frontend/templates/: admin.html  labeler.html  message.html
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: README.md  auto_post_to_render.py  init_database.py  init_db.py  make_email_optional.py  remove_api_key_column.py
tests/: README.md  test_main.py
(+5 files in other folders)
